syntax = "proto3";

package getsms;

option go_package = "./proto/getsms;getsms";

service Getsms {
	rpc SmsCode(Request) returns (Response) {}
}

message Request {
	string mobile = 1;
	string text = 2;
	string uuid = 3;
}

message Response {
	string errno = 1;
	string errmsg = 2;
}
