syntax = "proto3";

package getarea;

option go_package = "./proto/getarea;getarea";
service GetArea {
	rpc MicroGetArea(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}	
}

message Request {
}

message Response {
	string errno = 1;
	string errmsg = 2;
	repeated AreaInfo data = 3;
}

message AreaInfo{
	int32 aid = 1;
	string aname = 2;
}

message Message {
	string say = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}